<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/anakiwa">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clToolbars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/sandy_brown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/screen_margin"
            android:layout_marginTop="@dimen/screen_margin"
            android:layout_marginBottom="@dimen/screen_margin"
            android:drawableLeft="@drawable/ic_arrow_back"
            android:drawablePadding="@dimen/screen_margin"
            android:text="@string/invent"
            android:textAppearance="@style/TextAppearance.OpenSans.Bold.Headline6"
            android:textColor="@color/green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivUpload"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/zero_margin"
            android:layout_marginEnd="@dimen/screen_margin"
            android:src="@drawable/ic_upload"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivDot"
            android:layout_width="@dimen/_10sdp"
            android:layout_height="@dimen/zero_margin"
            android:src="@drawable/ic_dot"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/ivUpload"
            app:layout_constraintTop_toTopOf="@+id/ivUpload" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clToolbars">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/boxSearch"
                style="@style/TextInputLayout.Login.Form.Outlined.Dense"
                android:layout_width="@dimen/zero_margin"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_margin"
                android:layout_marginTop="@dimen/normal_margin"
                android:layout_marginEnd="@dimen/screen_margin"
                android:layout_marginBottom="@dimen/screen_margin"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
                app:boxCornerRadiusBottomStart="@dimen/_8sdp"
                app:boxCornerRadiusTopEnd="@dimen/_8sdp"
                app:boxCornerRadiusTopStart="@dimen/_8sdp"
                app:boxStrokeColor="@color/green"
                app:boxStrokeWidth="@dimen/_1sdp"
                app:boxStrokeWidthFocused="1dp"
                app:endIconDrawable="@drawable/ic_search"
                app:endIconMode="custom"
                app:endIconTint="@color/nobel"
                app:expandedHintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:placeholderText="@string/search_hint"
                app:placeholderTextAppearance="@style/TextAppearance.OpenSans.Regular.Body2"
                app:placeholderTextColor="@color/gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:maxLength="255"
                    android:maxLines="1"
                    android:textAppearance="@style/TextAppearance.OpenSans.Regular.Caption"
                    android:textColor="@color/dove_gray" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_margin"
                android:layout_marginTop="@dimen/screen_margin"
                android:layout_marginBottom="@dimen/screen_margin"
                android:text="@string/list_plot"
                android:textAppearance="@style/TextAppearance.OpenSans.Bold.Body1"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/boxSearch" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPlot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:clipToPadding="false"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <ImageView
        android:id="@+id/ivEmptyState"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_130sdp"
        android:layout_marginTop="@dimen/screen_margin"
        android:layout_marginBottom="@dimen/screen_margin"
        android:paddingBottom="@dimen/screen_margin"
        android:src="@drawable/iv_task"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/tvEmptyState"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvEmptyState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_margin"
        android:layout_marginTop="@dimen/screen_margin"
        android:layout_marginEnd="@dimen/large_margin"
        android:layout_marginBottom="@dimen/screen_margin"
        android:text="@string/empty_area"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.OpenSans.Bold.Body1"
        android:textColor="@color/green"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/glEmpty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:backgroundTintMode="add"
        android:contentDescription="TODO"
        android:src="@drawable/ic_refresh"
        android:visibility="gone"
        app:backgroundTint="@color/sandy_brown"
        app:borderWidth="@dimen/_1sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

</androidx.constraintlayout.widget.ConstraintLayout>